# markPDFdown-mcp

./: .gitignore  AGENTS.md  API.md  CLAUDE.md  ENV_CONFIG_GUIDE.md  LICENSE  MANUAL_DEPLOY_UPDATE_GUIDE.md  README.md  SECURITY Checklist.md  SERVER_UPDATE_GUIDE.md  docker-compose.yml  update.bat  update.sh
backend/: .dockerignore  .env.example  Dockerfile  docker-compose.yml  pyproject.toml  start_markpdfdown_mcp.bat  test_api_call.py  test_gemini_direct.py  test_llm.py
backend/scripts/: fix_total_pages.py  migrate_add_token_stats.py
backend/src/: mcp_server.py
backend/src/api/: main.py  routes.py  settings.py  sse_manager.py
backend/src/db/: database.py  models.py
backend/src/worker/: celery_app.py  smart_worker.py  tasks.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_models.py  test_smart_worker.py
frontend/: DUAL_PREVIEW_TEST_GUIDE.md  Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  i18n.ts  main.tsx
frontend/src/components/: LanguageSwitcher.tsx  MarkdownPreview.tsx  PDFViewer.tsx  SettingsForm.tsx  TaskProgress.tsx  TaskTable.tsx  UploadZone.tsx
frontend/src/components/__tests__/: SettingsForm.test.tsx  TaskTable.test.tsx  UploadZone.test.tsx
frontend/src/locales/: en.json  zh.json
frontend/src/pages/: Dashboard.tsx  Preview.tsx
frontend/src/services/: api.ts  api.ts.backup  useTaskProgress.ts
frontend/src/styles/: markdown.css
frontend/src/test/: setup.ts
frontend/src/utils/: BatchUploadScheduler.ts
(+3 files in other folders)
