[project]
name = "markpdfdown-server"
version = "0.1.0"
description = "Backend server for MarkPDFdown"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "celery>=5.3.6",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.25",
    "aiosqlite>=0.19.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-multipart>=0.0.6",
    "litellm>=1.18.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "mcp>=0.1.0",
    "pypdf2>=3.0.1",
    "pymupdf>=1.26.7",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "../markpdfdown_core/src"
]
testpaths = ["tests"]
asyncio_mode = "auto"
